--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
     "brunch": "^2.10.6",
     "vue-brunch": "^2.0.0"
   },
